--- a/stylo.css
+++ b/stylo.css
@@ -35,7 +35,7 @@ h2 {
 
 #tela {
     width: 100%;
-    height: 60px;
+    height: 120px;
     resize: none;
     border-radius: 8px;
     border: 2px solid #4ca1af;
@@ -44,6 +44,9 @@ h2 {
     text-align: center;
     background-color: #f0fafa;
     margin-bottom: 15px;
+    align-content: center;
+    font-size: 25pt;
+    color: #adadad;
 }
 
 
@@ -55,6 +58,7 @@ input[type="text"] {
     border: 2px solid #ccc;
     font-size: 16px;
     margin-bottom: 15px;
+    text-align: center;
 }
 
 input[type="text"]:focus {
